Fix AdminForm spacing issue

--- a/src/AdminLogin/AdminLogin.css
+++ b/src/AdminLogin/AdminLogin.css
@@ -1,10 +1,14 @@
 .AdminLogin{
-    height:100vh;
+    height:100%;
     display: flex;
     flex-direction: column;
     background-color: rgb(75, 75, 75);
 }
+#admin-login-form{
+    display: inline-block;
+    width:auto;
 
+}
 #admin-login-heading{
     background-color: white;
     margin-bottom: 0;
